--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body style="font-family: monospace;">
   
   <h1 align="center">Bot Games</h1>
-  <
+  <p align="center">Pick a Game</p>
+  
+  <div align="center" class="btns">
+    <input value="Guess the Number!" type="button" href="data/guessnumber.html">
+  </div>
   
 </body>
 </html>
